--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,9 +1,55 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>about</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header></app-header>
 <ion-content>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="12">
+                <ion-card>
+                    <ion-card-header color="tertiary">
+                        <ion-card-title>¡Hola!</ion-card-title>
+                        <ion-card-subtitle>Soy Krsnaratic Torres Meza</ion-card-subtitle>
+                    </ion-card-header>
+                    <ion-card-content>
+                        <p>Soy de México, nacida en Celaya y soy artista plástica en formación.</p>
+                        <p>
+                            Por si te lo preguntas... No, Krsnaratic no es mi nombre de artista, es mi nombre real, es nombre de mujer.
+                        </p>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col size="12" size-md="6">
+                <ion-card>
+                    <ion-img src="/assets/images/about(1).jpeg"></ion-img>
+                </ion-card>
+
+                <ion-card>
+                    <ion-card-header color="tertiary">
+                        <ion-card-title>Debo decirte algo...</ion-card-title>
+                    </ion-card-header>
+                    <ion-card-content>
+                        Mi tienda aún no tiene un ámplio catálogo, apenas empiezo, pero si te gustaría apoyar mi causa no solamente puedes comprar, también puedes ayudarme a ampliar mi catálogo enviándome una foto de algún accesorio personalizado de tu preferencia, con gusto
+                        te lo fabricaré.
+                    </ion-card-content>
+                </ion-card>
+
+            </ion-col>
+            <ion-col size="12" size-md="6">
+                <ion-card>
+                    <ion-img src="/assets/images/about(2).jpeg"></ion-img>
+                </ion-card>
+
+                <ion-card>
+                    <ion-card-header color="tertiary">
+                        <ion-card-title>Algo más sobre mí</ion-card-title>
+                    </ion-card-header>
+                    <ion-card-content>
+                        Soy una persona contemplativa, me desempeño como pintora de medio tiempo y artista de tiempo completo. Me encanta hacer cosas nuevas, probar té, llevar una vida vegetariana, ver competencias de automovilísticas, y servir al mundo como mi familia me ha
+                        enseñado. mis colores favoritos son el blanco y los tonos claros (Como el rosa), La pandemia me ha dado una oportunidad para crear artesanías ¡Mira el menú! Y avisame y hay algo que te guste.
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+
+        </ion-row>
+    </ion-grid>
+
 
 </ion-content>
