--- a/src/app/pages/my-services/my-services.page.html
+++ b/src/app/pages/my-services/my-services.page.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
 <ion-content>
-    <app-services [Services]="Services"></app-services>
+    <app-services-container [Services]="Services"></app-services-container>
 </ion-content>
