--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -3,11 +3,11 @@
         <ion-card-title>{{Product.name}}</ion-card-title>
         <ion-card-subtitle>{{Product.price}} MXN</ion-card-subtitle>
     </ion-card-header>
+    <ion-img class="Product-img" [src]="Product.img" [alt]="Product.img"></ion-img>
     <ion-card-content>
-        <img class="Product-img" [src]="Product.img" alt="">
+        <ion-button (click)="gotoWhatsApp()" color="primary" expand="block">
+            <ion-icon name="logo-whatsapp"></ion-icon>
+            Comprar
+        </ion-button>
     </ion-card-content>
-    <ion-button (click)="gotoWhatsApp()" color="primary" expand="block">
-        <ion-icon name="logo-whatsapp"></ion-icon>
-        Comprar
-    </ion-button>
 </ion-card>
